[tool.poetry]
name = "maug"
version = "0.1.0"
description = ""
authors = ["DuarteMRAlves <duartemalves@tecnico.ulisboa.pt>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
