[tool.poetry]
name = "maug"
version = "0.1.0"
description = ""
authors = ["DuarteMRAlves <duartemalves@tecnico.ulisboa.pt>"]

[tool.poetry.scripts]
augment = "maug.cli:augment"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.4"
pandas = "^1.3.4"
sentencepiece = "0.1.96"
stanza = "^1.3.0"
torch = "^1.8.2"
transformers = "^4.15.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
