[tool.poetry]
name = "unbabel-smaug"
version = "0.1.1"
description = "Sentence-level Multilingual Augmentation"
license = "Apache-2.0"
authors = ["Duarte Alves <duartemalves@tecnico.ulisboa.pt>"]
readme = "README.md"
repository = "https://github.com/Unbabel/smaug"
keywords = [
    "Natural Language Processing",
    "Data Augmentation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [
    { include = "smaug" },
]
include = [
    "README.md",
    "LICENSE.md",
]

[tool.poetry.scripts]
augment = "smaug.cli:augment"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.4"
pandas = "^1.3.4"
sentencepiece = "0.1.96"
stanza = "^1.3.0"
torch = "^1.8.2"
transformers = "^4.15.0"
nltk = "^3.7"
PyYAML = "^6.0"
packaging = "^21.3"

[tool.poetry.dev-dependencies]
pytest = "^7"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
